--- a/package.json
+++ b/package.json
@@ -36,13 +36,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.15.0"
   }
