Finished Gatsby Tutorial Part 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["Csvg", "doclist", "tseslint"]
+  "cSpell.words": [
+    "Csvg",
+    "doclist",
+    "trivago",
+    "tseslint"
+  ]
 }
