--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,13 @@
 {
-  // IntelliSense를 사용하여 가능한 특성에 대해 알아보세요.
-  // 기존 특성에 대한 설명을 보려면 가리킵니다.
-  // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
   "version": "0.2.0",
   "configurations": [
+    {
+      "name": "Chrome",
+      "request": "launch",
+      "type": "chrome",
+      "url": "http://localhost:8000",
+      "webRoot": "${workspaceFolder}"
+    },
     // Gatsby Debugging the Build Process:: VS Code Debugger (Manual Config)
     // https://www.gatsbyjs.com/docs/debugging-the-build-process/#vs-code-debugger-manual-config
     {
